--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="col-md-6 text-center" data-aos="fade-left">
-          <img src="Rehan Wangsaff.png" alt="Portfolio Image" class="img-fluid" />
+          <img src="arya.jpg" alt="Portfolio Image" class="img-fluid" />
         </div>
       </div>
     </section>
