--- a/tes.html
+++ b/tes.html
@@ -3,69 +3,171 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Background Effect</title>
-    
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <title>ARYA's WORLD</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet" />
     <style>
-      * {
+      html,
+      body {
         margin: 0;
         padding: 0;
-        box-sizing: border-box;
+        height: 100%;
+        overflow-x: hidden;
       }
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        color: white;
-      }
-      #particles-js {
-        position: absolute;
+
+      /* Navbar */
+      .navbar {
+        position: fixed;
+        top: 0;
         width: 100%;
-        height: 100vh;
-        background: linear-gradient(to right, #000428, #004e92);
-        z-index: -1;
+        z-index: 1000;
+        background: rgba(255, 255, 255, 0.98);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       }
-      .content {
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
+
+      body {
+        padding-top: 70px;
       }
+
+      /* Hero Section - 50/50 Split */
+      #home {
+        display: flex;
+        min-height: 100vh;
+      }
+
+      .hero-text {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 2rem;
+      }
+
+      .hero-image {
+        width: 50%;
+      }
+
+      .hero-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 768px) {
+        #home {
+          flex-direction: column;
+          min-height: auto;
+        }
+        .hero-text,
+        .hero-image {
+          width: 100%;
+        }
+        .hero-image {
+          height: 50vh;
+        }
+      }
+
+      /* Keep all other existing styles for other sections */
     </style>
   </head>
   <body>
     <!-- Background Effect -->
     <div id="particles-js"></div>
 
-    <!-- Content -->
-    <div class="content">
-      <h1>Welcome to Arya's World</h1>
-      <p>Code like a warrior, think like a king.</p>
-    </div>
+    <!-- Fixed Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">ARYA's WORLD</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sosmed">Sosmed</a></li>
+            <li class="nav-item"><a class="nav-link" href="#game-account">Game Account</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    <!-- JavaScript to Initialize Particles.js -->
+    <!-- Single Hero Section -->
+    <section id="home">
+      <div class="hero-text" data-aos="fade-up">
+          <h1 class="fw-bold">Welcome To ARYA's WORLD</h1>
+          <p class="text-muted">Coding is my sword, logic is my shield!</p>
+          <div class="mt-4">
+              <button class="btn btn-dark me-2">Learn More</button>
+              <button class="btn btn-outline-dark">Chat Now</button>
+          </div>
+      </div>
+      <div class="hero-image" data-aos="fade-left">
+          <img src="arya.jpg" alt="ARYA's Profile">
+      </div>
+  </section>
+
+    <!-- Rest of your content (Sosmed, Game Account sections) -->
+
+    <!-- Bootstrap JS & AOS JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
+    <!-- Bootstrap JS & AOS JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
     <script>
+      // Initialize AOS animations
+      AOS.init();
+
+      // Initialize particles.js
       particlesJS("particles-js", {
         particles: {
-          number: {
-            value: 100,
-            density: { enable: true, value_area: 800 },
-          },
-          color: { value: "#ffffff" },
-          shape: {
-            type: "circle",
-            stroke: { width: 0, color: "#000000" },
-          },
-          opacity: { value: 0.5, random: false },
+          number: { value: 100, density: { enable: true, value_area: 800 } },
+          color: { value: "#000000" },
+          shape: { type: "circle" },
+          opacity: { value: 0.5 },
           size: { value: 3, random: true },
-          move: {
-            enable: true,
-            speed: 2,
-            direction: "none",
-            random: false,
-            straight: false,
-            out_mode: "out",
-            bounce: false,
-          },
+          move: { enable: true, speed: 2, direction: "none" },
         },
+        interactivity: {
+          events: { onhover: { enable: true, mode: "repulse" } },
+          modes: { repulse: { distance: 100, duration: 0.4 } },
+        },
+      });
+
+      // Smooth scroll with navbar offset
+      document.querySelectorAll(".nav-link").forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute("href"));
+          if (target) {
+            const navbarHeight = document.querySelector(".navbar").offsetHeight;
+            window.scrollTo({
+              top: target.offsetTop - navbarHeight,
+              behavior: "smooth",
+            });
+            history.pushState(null, null, this.getAttribute("href"));
+          }
+        });
+      });
+
+      // Navbar active state on scroll
+      window.addEventListener("scroll", function () {
+        const sections = document.querySelectorAll("section");
+        const navLinks = document.querySelectorAll(".navbar-nav .nav-item");
+        const scrollPosition = window.scrollY + 100;
+
+        sections.forEach((section, index) => {
+          if (scrollPosition >= section.offsetTop && scrollPosition < section.offsetTop + section.offsetHeight) {
+            navLinks.forEach((link) => link.classList.remove("active"));
+            navLinks[index].classList.add("active");
+          }
+        });
       });
     </script>
   </body>
